Adding the clustering demo

--- a/machinelearning.ipynb
+++ b/machinelearning.ipynb
@@ -248,6 +248,283 @@
     "plt.scatter(petal_width, petal_length)\n",
     "plt.plot(xfit, yfit);"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification with K-Nearest Neighbor (KNN) Algorithm\n",
+    "\n",
+    "The KNN algorithm will attempt to infer a new data point’s class by looking at the classes of the majority of its k-neighbors. For example, if five of a new data point’s neighbors had a class of “Large”, while only two had a class of “Medium”, then the algorithm will predict that the class of the new data point is “Large”.\n",
+    "\n",
+    "![KNN Visualization](images/knn-visualization.png)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "penguins = sns.load_dataset('penguins')\n",
+    "penguins.sample(5)\n",
+    "\n",
+    "sns.pairplot(penguins, hue='species', height=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Penguins](images/penguins.png)\n",
+    "\n",
+    "### Classifying with one one feature\n",
+    "\n",
+    "We are only going to use the length of the bill to predict the penguin species.\n",
+    "\n",
+    "First we clean the data, and select only the values we will use.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "penguins = penguins.dropna()\n",
+    "\n",
+    "X = penguins[['bill_length_mm']]\n",
+    "y = penguins['species']\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We separate our data into the Train and Test data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "print(\"X Train Size: \", len(X_train), \"; Y Test Size\", len(X_test))\n",
+    "print(\"Y Train Size: \", len(y_train), \"; Y Test Size\", len(y_test))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a KNeighborsClassifier instance\n",
+    "\n",
+    "Definition:\n",
+    "\n",
+    "```python\n",
+    "KNeighborsClassifier(\n",
+    "    n_neighbors=5,          # The number of neighbors to consider\n",
+    "    weights='uniform',      # How to weight distances\n",
+    "    algorithm='auto',       # Algorithm to compute the neighbors\n",
+    "    leaf_size=30,           # The leaf size to speed up searches\n",
+    "    p=2,                    # The power parameter for the Minkowski metric\n",
+    "    metric='minkowski',     # The type of distance to use\n",
+    "    metric_params=None,     # Keyword arguments for the metric function\n",
+    "    n_jobs=None             # How many parallel jobs to run\n",
+    ")\n",
+    "```\n",
+    "\n",
+    "We create a model using the train data and Euclidean distance.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = KNeighborsClassifier(\n",
+    "    metric=\"euclidean\"\n",
+    ")\n",
+    "\n",
+    "clf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can predict for just one value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(clf.predict([[44.2]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or for all the test data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = clf.predict(X_test)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can verify how accurate the model was\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "print(format(accuracy_score(y_test, predictions),\".2%\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's try with all the numeric features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = penguins.select_dtypes(include='number')\n",
+    "y = penguins['species']\n",
+    "\n",
+    "X.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "clf = KNeighborsClassifier(\n",
+    "    metric=\"euclidean\"\n",
+    ")\n",
+    "clf.fit(X_train, y_train)\n",
+    "predictions = clf.predict(X_test)\n",
+    "\n",
+    "print(format(accuracy_score(y_test, predictions),\".4%\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can improve even more the model including the categorical data\n",
+    "\n",
+    "![One Hot Encoding Example](images/one_hot_encoding.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "penguins.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And also we can \"Min-Max\" the numeric values so all of them are in the same scale, and considered equally for the training."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "X = penguins.drop(columns = ['species'])\n",
+    "y = penguins['species']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "column_transformer = make_column_transformer(\n",
+    "    (OneHotEncoder(), ['sex', 'island']),\n",
+    "    (MinMaxScaler(), ['bill_depth_mm', 'bill_length_mm', 'flipper_length_mm', 'body_mass_g']),\n",
+    "    remainder='passthrough')\n",
+    "\n",
+    "X_train = column_transformer.fit_transform(X_train)\n",
+    "X_train = pd.DataFrame(data=X_train, columns=column_transformer.get_feature_names_out())\n",
+    "\n",
+    "X_train.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the fixed data we get a better prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = KNeighborsClassifier(p=1)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "X_test = column_transformer.transform(X_test)\n",
+    "X_test = pd.DataFrame(data=X_test, columns=column_transformer.get_feature_names_out())\n",
+    "\n",
+    "predictions = clf.predict(X_test)\n",
+    "\n",
+    "print(format(accuracy_score(y_test, predictions),\".4%\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
